fixed issues of weibo

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   tumblr           : # Username
   twitter          : # "UniofOxford"  # Replace this with your X / Twitter handle
   vine             : # Username
-  weibo            : EvanYU-233 # Username
+  weibo            : u/5485987074 # Username
   wikipedia        : # Username
   xing             : # Username
   youtube          : # Username
