--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-UK"
-title                    : "Jianxin Yu / Personal Homepage"
+title                    : "Jianxin Yu / Homepage"
 title_separator          : "-"
 name                     : &name "Jianxin Yu"
 description              : &description "personal description"
